--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <!-- input의 유효성 검사를 작동시키기 위해서 -->
     <!-- input은 form 안에 있어야 됨 -->
-    <form id="login-form">
-        <input required maxlength="15" type="text" placeholder="What is your name?">
+    <form id="login-form" class="hidden">
+        <input  required maxlength="15" type="text" placeholder="What is your name?">
         <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
